--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=todo-app
-
+server.port=8081
 spring.datasource.url=jdbc:mysql://localhost:3306/todo_app
 spring.datasource.username=root
 spring.datasource.password=11Akshay##
