--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,11 @@
 
 		<!-- MySQL Connector -->
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.6.0</version> <!-- Use the latest stable version -->
 		</dependency>
+
 
 		<!-- Spring Security -->
 		<dependency>
