--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,24 @@
-spring.datasource.url=${JDBC_DATABASE_URL}
-spring.datasource.username=${JDBC_DATABASE_USERNAME}
-spring.datasource.password=${JDBC_DATABASE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+# Database configuration with fallback for local development (H2 in-memory database)
+spring.datasource.url=${JDBC_DATABASE_URL:jdbc:h2:mem:todoapp;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE}
+spring.datasource.username=${JDBC_DATABASE_USERNAME:sa}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD:}
+spring.datasource.driver-class-name=${JDBC_DATABASE_DRIVER:org.h2.Driver}
 
+# JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
+# H2 Console (for development only)
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# Server configuration
+server.port=8080
+
+# Connection pool settings
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
